fix product select styles
Squashed commit of the following:

commit f94057681d660339bd25a28e97eb33d26539fca2
Merge: dab2e9a 3d707cc
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Apr 24 17:21:56 2023 +0300

    Merge branch 'master' into fix/safari-styles

commit dab2e9ad200d9d86fd02e9429ccfa562d4c9e317
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Apr 24 17:15:03 2023 +0300

    fix text color for search form and product select

commit f13518472389a39f542b3a3fe53f0f5788252307
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Apr 24 17:05:34 2023 +0300

    fix product-select styles

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -282,13 +282,13 @@ footer > .mission {
   border: none;
   font-size: 1.2vw;
   width: 19vw;
+  color: #4a4a4a;
   background: #fff url(../img/search.png) 2.2vw center no-repeat;
   background-size: 2.5vw;
 }
 
 .product-form {
   margin: 0 0 2vw;
-  color: #737373;
   padding: 1.2vw 0 1.2vw 1.5vw;
   border-radius: 0.3vw;
   box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, 0.1);
@@ -302,6 +302,12 @@ footer > .mission {
 .product-select {
   border: none;
   font-size: 1.2vw;
+  color: #4a4a4a;
+  background: #fff url(../img/arrow-down.png) right center no-repeat;
+  background-size: 24px;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 .no-test-found {
